--- a/project2/app/package.json
+++ b/project2/app/package.json
@@ -9,11 +9,12 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.6.0",
-    "webpack": "^4.28.1",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "serialize-javascript": "^2.1.2",
     "web3": "^1.2.6"
   }
 }
