--- a/project3/package.json
+++ b/project3/package.json
@@ -12,5 +12,9 @@
   "license": "MIT",
   "devDependencies": {
     "lite-server": "2.4.0"
+  },
+  "dependencies": {
+    "truffle-assertions": "^0.9.2",
+    "web3": "^1.2.6"
   }
 }
