--- a/project3/package.json
+++ b/project3/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "truffle-assertions": "^0.9.2",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.2.6"
   }
 }
